// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simple [
  '\\\\p{Script_Extensions=Anatolian_Hieroglyphs}',
  'u',
  { unicodePropertyEscape: false }
] options 1`] = `
{
  "flags": "u",
  "options": {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "unicodePropertyEscape": false,
    "useUnicodeFlag": true,
  },
}
`;

exports[`simple [
  '\\\\p{Script_Extensions=Anatolian_Hieroglyphs}',
  'u',
  { unicodePropertyEscape: false }
] test 1`] = `"\\p{Script_Extensions=Anatolian_Hieroglyphs}"`;

exports[`simple [
  '\\\\p{Script_Extensions=Anatolian_Hieroglyphs}',
  'u',
  { unicodePropertyEscape: false }
] test 2`] = `/\\\\p\\{Script_Extensions=Anatolian_Hieroglyphs\\}/u`;

exports[`simple [
  '\\\\p{Script_Extensions=Anatolian_Hieroglyphs}',
  'u',
  { unicodePropertyEscape: false, useUnicodeFlag: false }
] options 1`] = `
{
  "flags": "u",
  "options": {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "unicodePropertyEscape": false,
    "useUnicodeFlag": false,
  },
}
`;

exports[`simple [
  '\\\\p{Script_Extensions=Anatolian_Hieroglyphs}',
  'u',
  { unicodePropertyEscape: false, useUnicodeFlag: false }
] test 1`] = `"\\p{Script_Extensions=Anatolian_Hieroglyphs}"`;

exports[`simple [
  '\\\\p{Script_Extensions=Anatolian_Hieroglyphs}',
  'u',
  { unicodePropertyEscape: false, useUnicodeFlag: false }
] test 2`] = `/\\\\p\\{Script_Extensions=Anatolian_Hieroglyphs\\}/u`;

exports[`simple [
  '\\\\p{Script_Extensions=Anatolian_Hieroglyphs}',
  'u',
  { unicodePropertyEscape: false, useUnicodeFlag: true }
] options 1`] = `
{
  "flags": "u",
  "options": {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "unicodePropertyEscape": false,
    "useUnicodeFlag": true,
  },
}
`;

exports[`simple [
  '\\\\p{Script_Extensions=Anatolian_Hieroglyphs}',
  'u',
  { unicodePropertyEscape: false, useUnicodeFlag: true }
] test 1`] = `"\\p{Script_Extensions=Anatolian_Hieroglyphs}"`;

exports[`simple [
  '\\\\p{Script_Extensions=Anatolian_Hieroglyphs}',
  'u',
  { unicodePropertyEscape: false, useUnicodeFlag: true }
] test 2`] = `/\\\\p\\{Script_Extensions=Anatolian_Hieroglyphs\\}/u`;

exports[`simple [
  '\\\\p{Script_Extensions=Anatolian_Hieroglyphs}',
  'u',
  { unicodePropertyEscape: true }
] options 1`] = `
{
  "flags": "u",
  "options": {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "unicodePropertyEscape": true,
    "useUnicodeFlag": true,
  },
}
`;

exports[`simple [
  '\\\\p{Script_Extensions=Anatolian_Hieroglyphs}',
  'u',
  { unicodePropertyEscape: true }
] test 1`] = `"[\\u{14400}-\\u{14646}]"`;

exports[`simple [
  '\\\\p{Script_Extensions=Anatolian_Hieroglyphs}',
  'u',
  { unicodePropertyEscape: true }
] test 2`] = `/\\[\\\\u\\{14400\\}-\\\\u\\{14646\\}\\]/u`;

exports[`simple [
  '\\\\p{Script_Extensions=Anatolian_Hieroglyphs}',
  'u',
  { unicodePropertyEscape: true, useUnicodeFlag: false }
] options 1`] = `
{
  "flags": "u",
  "options": {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "unicodePropertyEscape": true,
    "useUnicodeFlag": false,
  },
}
`;

exports[`simple [
  '\\\\p{Script_Extensions=Anatolian_Hieroglyphs}',
  'u',
  { unicodePropertyEscape: true, useUnicodeFlag: false }
] test 1`] = `"(?:\\uD811[\\uDC00-\\uDE46])"`;

exports[`simple [
  '\\\\p{Script_Extensions=Anatolian_Hieroglyphs}',
  'u',
  { unicodePropertyEscape: true, useUnicodeFlag: false }
] test 2`] = `/\\(\\?:\\\\uD811\\[\\\\uDC00-\\\\uDE46\\]\\)/u`;

exports[`simple [
  '\\\\p{Script_Extensions=Anatolian_Hieroglyphs}',
  'u',
  { unicodePropertyEscape: true, useUnicodeFlag: true }
] options 1`] = `
{
  "flags": "u",
  "options": {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "unicodePropertyEscape": true,
    "useUnicodeFlag": true,
  },
}
`;

exports[`simple [
  '\\\\p{Script_Extensions=Anatolian_Hieroglyphs}',
  'u',
  { unicodePropertyEscape: true, useUnicodeFlag: true }
] test 1`] = `"[\\u{14400}-\\u{14646}]"`;

exports[`simple [
  '\\\\p{Script_Extensions=Anatolian_Hieroglyphs}',
  'u',
  { unicodePropertyEscape: true, useUnicodeFlag: true }
] test 2`] = `/\\[\\\\u\\{14400\\}-\\\\u\\{14646\\}\\]/u`;

exports[`simple [ '(?<=.)a' ] test 1`] = `"(?<=.)a"`;

exports[`simple [ '(?<=.)a' ] test 2`] = `/\\(\\?<=\\.\\)a/`;

exports[`simple [ '(?<=.)a', '', { lookbehind: true } ] options 1`] = `
{
  "flags": "",
  "options": {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "useUnicodeFlag": false,
  },
}
`;

exports[`simple [ '(?<=.)a', '', { lookbehind: true } ] test 1`] = `"(?<=.)a"`;

exports[`simple [ '(?<=.)a', '', { lookbehind: true } ] test 2`] = `/\\(\\?<=\\.\\)a/`;

exports[`simple [ '(?<name>.)\\\\k<name>' ] test 1`] = `"(.)\\1"`;

exports[`simple [ '(?<name>.)\\\\k<name>' ] test 2`] = `/\\(\\.\\)\\\\1/`;

exports[`simple [ '(?<name>.)\\\\k<name>', '', { namedGroup: true } ] options 1`] = `
{
  "flags": "",
  "options": {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "useUnicodeFlag": false,
  },
}
`;

exports[`simple [ '(?<name>.)\\\\k<name>', '', { namedGroup: true } ] test 1`] = `"(.)\\1"`;

exports[`simple [ '(?<name>.)\\\\k<name>', '', { namedGroup: true } ] test 2`] = `/\\(\\.\\)\\\\1/`;

exports[`simple [ '.', '', { dotAllFlag: true } ] options 1`] = `
{
  "flags": "",
  "options": {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "useUnicodeFlag": false,
  },
}
`;

exports[`simple [ '.', '', { dotAllFlag: true } ] test 1`] = `"."`;

exports[`simple [ '.', '', { dotAllFlag: true } ] test 2`] = `/\\./`;

exports[`simple [ '.', 'su', { dotAllFlag: false } ] options 1`] = `
{
  "flags": "su",
  "options": {
    "dotAllFlag": false,
    "lookbehind": true,
    "namedGroup": true,
    "useUnicodeFlag": true,
  },
}
`;

exports[`simple [ '.', 'su', { dotAllFlag: false } ] test 1`] = `"[\\0-\\t\\x0B\\f\\x0E-\\u2027\\u202A-\\u{10FFFF}]"`;

exports[`simple [ '.', 'su', { dotAllFlag: false } ] test 2`] = `/\\[\\\\0-\\\\t\\\\x0B\\\\f\\\\x0E-\\\\u2027\\\\u202A-\\\\u\\{10FFFF\\}\\]/su`;

exports[`simple [ '.', 'su', { dotAllFlag: true } ] options 1`] = `
{
  "flags": "su",
  "options": {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": true,
    "useUnicodeFlag": true,
  },
}
`;

exports[`simple [ '.', 'su', { dotAllFlag: true } ] test 1`] = `"[\\0-\\u{10FFFF}]"`;

exports[`simple [ '.', 'su', { dotAllFlag: true } ] test 2`] = `/\\[\\\\0-\\\\u\\{10FFFF\\}\\]/su`;

exports[`simple [ '.', 'u' ] test 1`] = `"[\\0-\\t\\x0B\\f\\x0E-\\u2027\\u202A-\\u{10FFFF}]"`;

exports[`simple [ '.', 'u' ] test 2`] = `/\\[\\\\0-\\\\t\\\\x0B\\\\f\\\\x0E-\\\\u2027\\\\u202A-\\\\u\\{10FFFF\\}\\]/u`;

exports[`simple [ '.', 'u', { dotAllFlag: false } ] options 1`] = `
{
  "flags": "u",
  "options": {
    "dotAllFlag": false,
    "lookbehind": true,
    "namedGroup": true,
    "useUnicodeFlag": true,
  },
}
`;

exports[`simple [ '.', 'u', { dotAllFlag: false } ] test 1`] = `"[\\0-\\t\\x0B\\f\\x0E-\\u2027\\u202A-\\u{10FFFF}]"`;

exports[`simple [ '.', 'u', { dotAllFlag: false } ] test 2`] = `/\\[\\\\0-\\\\t\\\\x0B\\\\f\\\\x0E-\\\\u2027\\\\u202A-\\\\u\\{10FFFF\\}\\]/u`;

exports[`simple [ '[\\\\u{1D306}-\\\\u{1D308}a-z]', 'u' ] test 1`] = `"[a-z\\u{1D306}-\\u{1D308}]"`;

exports[`simple [ '[\\\\u{1D306}-\\\\u{1D308}a-z]', 'u' ] test 2`] = `/\\[a-z\\\\u\\{1D306\\}-\\\\u\\{1D308\\}\\]/u`;

exports[`simple [ '[\\\\u{1D306}-\\\\u{1D308}a-z]', 'ui' ] test 1`] = `"[a-z\\u{1D306}-\\u{1D308}]"`;

exports[`simple [ '[\\\\u{1D306}-\\\\u{1D308}a-z]', 'ui' ] test 2`] = `/\\[a-z\\\\u\\{1D306\\}-\\\\u\\{1D308\\}\\]/iu`;

exports[`simple [ '\\\\p{Script_Extensions=Anatolian_Hieroglyphs}', 'u' ] test 1`] = `"\\p{Script_Extensions=Anatolian_Hieroglyphs}"`;

exports[`simple [ '\\\\p{Script_Extensions=Anatolian_Hieroglyphs}', 'u' ] test 2`] = `/\\\\p\\{Script_Extensions=Anatolian_Hieroglyphs\\}/u`;

exports[`simple [ 'foo.bar' ] test 1`] = `"foo.bar"`;

exports[`simple [ 'foo.bar' ] test 2`] = `/foo\\.bar/`;

exports[`simple [ 'foo.bar', 'u' ] test 1`] = `"foo[\\0-\\t\\x0B\\f\\x0E-\\u2027\\u202A-\\u{10FFFF}]bar"`;

exports[`simple [ 'foo.bar', 'u' ] test 2`] = `/foo\\[\\\\0-\\\\t\\\\x0B\\\\f\\\\x0E-\\\\u2027\\\\u202A-\\\\u\\{10FFFF\\}\\]bar/u`;

exports[`simple ThrowError [ '(?<=.)a', '', { lookbehind: false } ] options 1`] = `
{
  "flags": "",
  "options": {
    "dotAllFlag": true,
    "lookbehind": false,
    "namedGroup": true,
    "useUnicodeFlag": false,
  },
}
`;

exports[`simple ThrowError [ '(?<name>.)\\\\k<name>', '', { namedGroup: false } ] options 1`] = `
{
  "flags": "",
  "options": {
    "dotAllFlag": true,
    "lookbehind": true,
    "namedGroup": false,
    "useUnicodeFlag": false,
  },
}
`;
